.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
as it is included in Scrooge's user's guide.

4.x
-----

4.2.0
~~~~~~~

- bump finagle version to 6.30

4.1.0
~~~~~~~

- bump finagle version to 6.29

4.0.0
~~~~~~~

- scrooge: Scrooge 4.0.0 includes backward compatibility patches for Finagle service per endpoint generation. This allows using Thrift endpoints as Finagle Services and combining them with Filters.

3.x
-----

3.20.0
~~~~~~~

- scrooge: Generate a finagle Service per thrift method (Service interface)

3.19.0
~~~~~~~
- scrooge: Performance improvements and bug fixes.
- scrooge-sbt-plugin: Add output language support in scrooge-sbt-plugin.

3.18.1
~~~~~~~
- scrooge-maven-plugin: Fix bug with plugin parameters.

3.18.0
~~~~~~~
- scrooge: Support ignoring unknown enum ids.
- scrooge: Output full exception chain in client stats.
- scrooge: Add union metadata to generated scala code.
- scrooge-maven-plugin: Resolve IDLs transitively; deprecate the dependencyIncludes option.
- scrooge-sbt-plugin: Add thrift files to published artifact in sbt-plugin.
- scrooge-sbt-plugin: Upgrade to autoPlugin.

3.17.0
~~~~~~~

- scrooge: add is required to ThriftStructFieldInfo.
- scrooge minor docs update: add logo and short description.
- scrooge-serializer: Remove dependency on scrooge-runtime.
- scrooge: Cache mustache resources to improve generation performance.
- scrooge: Disallow identifiers that are thrift keywords.
- scrooge: Remove SafeVarargs for JDK 6 compatibility.

3.16.6
~~~~~~~

- scrooge-core: Added scala 2.11 support
- scrooge-core: scrooge: add .withoutPassthrough method that recursively removes passthrough fields
- scrooge-doc: Fix formatting in the CLI help page.
- scrooge-linter: Cleaner logging and options.
- scrooge-linter: remove invalid CONFIG.ini.
- scrooge: prefer Protocols.binaryFactory over TBinaryProtocol.Factory

3.16.3
~~~~~~~
